<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tvTitle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MovieDetailsActivity">

    <ImageView
        android:id="@+id/ivPoster"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/omdb"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvMovie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginLeft="170dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/noData"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivPoster"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvYear"
        style="@style/TextViewStyle"
        android:layout_width="match_parent"
        android:layout_marginStart="170dp"
        android:layout_marginLeft="170dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMovie" />

    <TextView
        android:id="@+id/tvPlot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginLeft="170dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/noData"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvYear"
        app:layout_constraintTop_toBottomOf="@+id/tvYear" />

    <TextView
        android:id="@+id/tvGenre"
        style="@style/TextViewStyle"
        android:layout_width="match_parent"
        android:layout_marginStart="170dp"
        android:layout_marginLeft="170dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPlot" />

    <TextView
        android:id="@+id/tvTime"
        style="@style/TextViewStyle"
        android:layout_width="match_parent"
        android:layout_marginStart="170dp"
        android:layout_marginLeft="170dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGenre" />

    <TextView
        android:id="@+id/tvReleaseTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/original_release"
        app:layout_constraintEnd_toStartOf="@+id/tvTomatoesTitle"
        app:layout_constraintStart_toStartOf="@+id/ivPoster"
        app:layout_constraintTop_toTopOf="@+id/tvTomatoesTitle" />

    <TextView
        android:id="@+id/tvTomatoesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/rotten_tomatoes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvReleaseTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvTime" />

    <TextView
        android:id="@+id/tvRealise"
        style="@style/TextViewStyle"
        android:layout_width="wrap_content"
        android:layout_marginTop="4dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tvReleaseTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvReleaseTitle" />

    <TextView
        android:id="@+id/tvInternetTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/internet_votes"
        app:layout_constraintStart_toStartOf="@+id/tvRealise"
        app:layout_constraintTop_toBottomOf="@+id/tvRealise" />

    <TextView
        android:id="@+id/tvInternet"
        style="@style/TextViewStyle"
        android:layout_width="wrap_content"
        android:layout_marginTop="4dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tvInternetTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvInternetTitle" />

    <TextView
        android:id="@+id/tvMetacriticTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/metacritic"
        app:layout_constraintStart_toStartOf="@+id/tvTomatoesTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvTomatoes" />

    <TextView
        android:id="@+id/tvMetacritic"
        style="@style/TextViewStyle"
        android:layout_width="wrap_content"
        android:layout_marginTop="4dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tvMetacriticTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvMetacriticTitle" />

    <TextView
        android:id="@+id/tvTomatoes"
        style="@style/TextViewStyle"
        android:layout_width="wrap_content"
        android:layout_marginTop="4dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tvTomatoesTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvTomatoesTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>